--- a/source/sass/body.scss
+++ b/source/sass/body.scss
@@ -3,6 +3,7 @@
   width: 320px;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
+  color: #333333;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
@@ -19,8 +20,11 @@
   }
 }
 
-.button {
+.button,
+.result__button {
   font: inherit;
+  width: 281px;
+  height: 58px;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
@@ -30,6 +34,10 @@
   text-transform: uppercase;
   background-color: #81b3d2;
   border: none;
+}
+
+.required {
+  color: rgba(#000000, 0.3);
 }
 
 .visually-hidden {
