--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,10 @@
 @use "./blocks/advantages.scss";
 @use "./blocks/location.scss";
 @use "./blocks/main-footer.scss";
+@use "./blocks/introduction-form.scss";
+@use "./blocks/impression-form.scss";
+@use "./blocks/contact-form.scss";
+@use "./blocks/attraction-form.scss";
+@use "./blocks/review-form.scss";
+@use "./blocks/popup.scss";
+@use "./blocks/catalog.scss";
