--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -3,3 +3,18 @@
   font-size: 18px;
   line-height: 26px;
 }
+
+.result__button {
+  font: inherit;
+  width: 281px;
+  height: 58px;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  color: #ffffff;
+  vertical-align: middle;
+  text-transform: uppercase;
+  background-color: #81b3d2;
+  border: none;
+}
