--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -3,3 +3,12 @@
   font-size: 18px;
   line-height: 26px;
 }
+
+
+@media (min-width: 768px) {
+  .main-footer__wrapper {
+
+    display: flex;
+
+  }
+}
