--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,20 +1,34 @@
+.main-nav {
+  position: relative;
+  display: flex;
+}
+
 .main-nav__list {
-  display: absolute;
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
   list-style: none;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+
 }
 
 .main-nav__wrapper {
+  position: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: grid;
   background-color: #81b3d2;
 }
 
 .main-nav__item {
+  background-color: #81b3d2;
   text-align: center;
-  padding: 17px 12px;
-  margin: 0;
+  padding: 0;
+  margin: 17px auto 0;
+  ;
+  height: 55px;
 
   a {
     color: #ffffff;
@@ -26,5 +40,48 @@
 
   &:disabled {
     background-color: #e5e5e5;
+  }
+}
+
+@media (min-width: 768px) {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__logo {
+    order: 2;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .main-nav__list {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: #ffffff;
+  }
+
+  .main-nav__item {
+    background-color: #ffffff;
+    text-align: center;
+    margin: 17px 5px 18px 5px;
+    height: 55px;
+
+
+    a {
+      color: #000000;
+
+    }
+
+    li {
+      margin: 0;
+    }
+  }
+
+  .main-nav__logo {
+    order: 2;
+    position: absolute;
   }
 }
