--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,6 +1,7 @@
 .page__body {
   margin: 0;
-  width: 320px;
+  width: auto;
+  min-width: 320px;
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   color: #333333;
@@ -15,7 +16,7 @@
   }
 
   img {
-    max-width: 100;
+    max-width: 100%;
     height: auto;
   }
 }
