--- a/source/sass/blocks/extra-advantages.scss
+++ b/source/sass/blocks/extra-advantages.scss
@@ -4,7 +4,6 @@
   line-height: 26px;
   margin-top: 0;
   padding-top: 31px;
-
 }
 
 .extra-advantages__container {
@@ -39,14 +38,13 @@
 }
 
 @media (min-width: 768px) {
-
   .extra-advantages__container {
     height: 100%;
     background-color: #ffffff;
     position: relative;
     padding: 0;
     display: flex;
-    height: 330px;
+    min-height: 330px;
     justify-content: space-around;
     z-index: 2;
   }
