--- a/source/sass/blocks/contact-form.scss
+++ b/source/sass/blocks/contact-form.scss
@@ -15,8 +15,11 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  width: 280px;
+  min-width: 280px;
   height: 58px;
+  margin: 0 auto;
+  width: 100%;
+
   background-color: #f2f2f2;
   border: 0;
 
@@ -33,11 +36,6 @@
   label {
     margin-left: 16px;
     text-align: end;
-  }
-
-  input {
-    margin: 0 auto;
-    width: 100%;
   }
 }
 
