--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -4,30 +4,31 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  background-color: lightgray;
+  min-height: 389px;
 
   &__background {
     position: relative;
     width: 100%;
+    background-color: lightgray;
   }
 
   &__text {
     position: absolute;
     width: auto;
+
   }
 }
 
 @media (min-width: 768px) {
   .intro {
-
     &__background {
       position: relative;
-
     }
 
     &__text {
       position: absolute;
       width: auto;
     }
-
   }
 }
