--- a/source/sass/blocks/introduction-form.scss
+++ b/source/sass/blocks/introduction-form.scss
@@ -8,10 +8,12 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
-  width: 280px;
+  min-width: 280px;
+  width: 100%;
   height: 58px;
   background-color: #f2f2f2;
   border: 0;
+  margin: 0 auto;
 
   &::placeholder {
     color: #000000;
@@ -32,11 +34,6 @@
   label {
     margin-left: 16px;
     text-align: end;
-  }
-
-  input {
-    margin: 0 auto;
-    width: 100%;
   }
 }
 
