--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -22,34 +22,12 @@
 }
 
 .catalog .photo-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
 }
 
 .catalog-item {
   display: grid;
   margin: 24px 20px 25px;
-
-  img {
-    width: 100%;
-  }
-
-  &--1 {
-    grid-area: 1;
-    min-width: 648px;
-  }
-
-  &--2 {
-    grid-area: 2;
-  }
-
-  &--3 {
-    grid-area: 3;
-  }
-
-  &--4 {
-    grid-area: 3;
-  }
 }
 
 .catalog-item__description {
@@ -73,19 +51,38 @@
 @media (min-width: 768px) {
   .catalog .photo-container {
     display: grid;
-    grid-template: 1fr 1fr
-      1fr 1fr
-      1fr 1fr;
 
     grid-template-areas:
-      "1 1"
-      "2 3"
-      "4 5";
+      "main-photo main-photo"
+      "photo-2 photo-3"
+      "photo-4 photo-5";
   }
-}
 
-.catalog-item__wrapper {
-  display: flex;
-  justify-content: space-between;
-  background-color: #eaeaea;
+  .catalog-item__wrapper {
+    display: flex;
+    justify-content: space-between;
+    background-color: #eaeaea;
+  }
+
+  .catalog-item {
+    img {
+      width: 100%;
+    }
+
+    &--1 {
+      grid-area: main-photo;
+    }
+
+    &--2 {
+      grid-area: photo-2;
+    }
+
+    &--3 {
+      grid-area: photo-3;
+    }
+
+    &--4 {
+      grid-area: photo-4;
+    }
+  }
 }
