--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -1,12 +1,18 @@
-.comment__title {
+.comment-form {
+  display: grid;
+  row-gap: 16px;
+  margin: 24px 20px 39px;
+}
+
+.comment-form__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
 }
 
-.comment__input textarea {
+.comment-form__input textarea {
   width: 279px;
-  height: 150px;
+  min-height: 150px;
   background-color: #f2f2f2;
   border: 0;
 
@@ -17,5 +23,16 @@
     line-height: 21px;
     color: rgba(#000000, 0.3);
     padding-left: 16px;
+  }
+}
+
+@media (min-width: 768px) {
+  .comment-form {
+    grid-area: comment;
+  }
+
+  .comment-form__input textarea {
+    width: 648px;
+    min-height: 160px;
   }
 }
