--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -4,19 +4,18 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  background-color: lightgray;
+  background-color: #d3d3d3;
   min-height: 389px;
 
   &__background {
     position: relative;
     width: 100%;
-    background-color: lightgray;
+    background-color: #d3d3d3;
   }
 
   &__text {
     position: absolute;
     width: auto;
-
   }
 }
 
