made a few changes

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -28,6 +28,10 @@
 .catalog-item {
   display: grid;
   margin: 24px 20px 25px;
+
+  img {
+    display: block;
+  }
 }
 
 .catalog-item__description {
