--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,6 +1,7 @@
 .intro {
   display: flex;
-  position: relative;
+  position: absolute;
+  top: 56px;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
