--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,20 +10,58 @@
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+.main-nav--closed .main-nav__wrapper {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 17px;
+  width: 36px;
+  height: 2px;
+  background-color: #ffffff;
+  box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+}
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: fade(#ffffff, 30%);
+  box-shadow:
+    0 8px 0 0 fade(#ffffff, 30%),
+    0 16px 0 0 fade(#ffffff, 30%);
+}
+
+.main-nav--closed .main-list__item {
+  display: none;
+}
+
+
+.main-nav--opened .main-nav__list {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
 }
 
-.main-nav__wrapper {
-  position: block;
+.main-nav--opened .main-nav__wrapper {
   margin: 0;
   padding: 0;
   width: 100%;
   display: grid;
 }
 
-.main-nav__item {
+.main-nav--opened .main-nav__item {
   background-color: #81b3d2;
   text-align: center;
   padding-top: 17px;
@@ -45,26 +83,49 @@
 
 @media (min-width: 768px) {
   .main-nav__list {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-around;
     background-color: #ffffff;
+    display: flex;
+    justify-content: space-evenly;
   }
+
+.main-nav__wrapper {
+  width: 100%;
+}
+
+  .main-nav__toggle {
+    display: none;
+  }
+
 
   .main-nav__item {
     background-color: #ffffff;
     text-align: center;
     margin: 17px 5px 18px 5px;
     height: 55px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 21px;
 
     a {
       color: #000000;
     }
 
+    &--active a {
+      color: #766357;
+    }
+
     li {
       margin: 0;
     }
+
+
+  &:hover {
+    background-color: #ffffff;
+  }
+
+  &:disabled {
+    background-color: #ffffff;
+  }
   }
 
   .main-nav__logo {
